--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
--e file:///brainboost/packages/brainboost_data_source_package
--e file:///brainboost/packages/brainboost_configuration_package
--e file:///brainboost/packages/brainboost_data_source_logger_package
+git+https://github.com/PabloBorda/brainboost_data_source_package.git
+git+https://github.com/PabloBorda/brainboost_configuration_package.git
+git+https://github.com/PabloBorda/brainboost_data_source_logger_package.git
 pandas==2.2.3
 redis
